# study_project_ml

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt  run_experiments.sh  setup_project.sh
config/: experiments.yml
docs/: mkdocs.yml
docs/docs/: index.md
study_project_ml/: example.py  pyproject.toml
study_project_ml/docs/: mkdocs.yml
study_project_ml/docs/docs/: index.md
study_project_ml/pad_project_ml/: __init__.py  dataset.py  features.py  pipeline_s3.py  plots.py  processing.py  s3_utils.py
study_project_ml/pad_project_ml/modeling/: predict.py  train.py
